--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
