--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
+    "socket.io-client": "^4.6.2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
     "vuex": "^4.1.0",
@@ -18,8 +19,11 @@
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.3.5"
   }
 }
